[project]
name = "rtmlib"
version = "0.0.14"
description = "RTMPose series (RTMPose, DWPose, RTMO, RTMW) without mmcv, mmpose, mmdet etc."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "onnxruntime>=1.23.2",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "tqdm>=4.67.1",
]
