[project]
name = "rtmlib"
version = "0.0.14"
description = "RTMPose series (RTMPose, DWPose, RTMO, RTMW) without mmcv, mmpose, mmdet etc."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "onnxruntime",
    "opencv-contrib-python",
    "opencv-python",
    "tqdm",
]
